--- a/server/authoritative_server/index.html
+++ b/server/authoritative_server/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <script src="https://cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/phaser-matter-collision-plugin"></script>
         <script src="js/game.js"></script>
     </body>
 </html>
