--- a/src/client/public/game.html
+++ b/src/client/public/game.html
@@ -4,8 +4,12 @@
     <title>Phaser 3 TypeScript Starter</title>
     <meta charset="utf-8" />
     <style>
-      body {
-        margin: 0;
+      html,
+      body,
+      canvas {
+          margin: 0 !important;
+          padding: 0 !important;
+          overflow: hidden !important;
       }
     </style>
     <script type="module" src="../game/index.ts"></script>
