[+] préchargement et image fakhear

--- a/src/client/public/game.html
+++ b/src/client/public/game.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
-    <title>Phaser 3 TypeScript Starter</title>
+    <title>👻 Resident streamer 🧟</title>
     <meta charset="utf-8" />
     <style>
       html,
