--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           overflow: hidden !important;
       }
     </style>
-    <script type="module" src="/src/client/game/index.ts"></script>
+    <script type="module" src="./src/client/game/index.ts"></script>
   </head>
   <body>
     <div id="game"></div>
