[+] nombre de joueurs dans le lobby + liste id des joueurs + liste des sprites fakhear [TODO] optimisé affichage

--- a/src/client/public/game.html
+++ b/src/client/public/game.html
@@ -3,14 +3,21 @@
   <head>
     <title>👻 Resident streamer 🧟</title>
     <meta charset="utf-8" />
+    <link rel="preload" as="font" href="SpeedRushItalic-GOYoa.ttf" type="font/ttf" />
+
     <style>
-      html,
-      body,
-      canvas {
-          margin: 0 !important;
-          padding: 0 !important;
-          overflow: hidden !important;
-      }
+    @font-face {
+      font-family: CustomFont;
+      src: url('./SpeedRushItalic-GOYoa.ttf');
+    }
+    html,
+    body,
+    canvas {
+      font-family: CustomFont;
+      margin: 0 !important;
+      padding: 0 !important;
+      overflow: hidden !important;
+    }
     </style>
     <script type="module" src="../game/index.ts"></script>
   </head>
