[~] contenu texte à gérer coté serveur

--- a/src/client/public/game.html
+++ b/src/client/public/game.html
@@ -7,13 +7,18 @@
 
     <style>
     @font-face {
-      font-family: CustomFont;
+      font-family: CustomFontItalic;
       src: url('./SpeedRushItalic-GOYoa.ttf');
+    }
+
+    @font-face {
+      font-family: CustomFontNormal;
+      src: url('./SpeedRushNormal.ttf');
     }
     html,
     body,
     canvas {
-      font-family: CustomFont;
+      font-family: CustomFontItalic;
       margin: 0 !important;
       padding: 0 !important;
       overflow: hidden !important;
