--- a/src/client/public/loginform.html
+++ b/src/client/public/loginform.html
@@ -1,6 +1,6 @@
 <style>
 .login {
-  background: #eceeee;
+  background: #1c022699;
   border: 1px solid #42464b;
   border-radius: 6px;
   height: 180px;
