--- a/src/client/public/game.html
+++ b/src/client/public/game.html
@@ -3,28 +3,31 @@
   <head>
     <title>👻 Resident streamer 🧟</title>
     <meta charset="utf-8" />
-    <link rel="preload" as="font" href="SpeedRushItalic-GOYoa.ttf" type="font/ttf" />
+    <!-- <link rel="preload" as="font" href="./LeagueGothic-Regular.otf" type="font/otf" /> -->
+    <!-- <link rel="preload" as="font" href="./LeagueGothic-Italic.otf" type="font/otf" /> -->
 
     <style>
     @font-face {
       font-family: CustomFontItalic;
-      src: url('./SpeedRushItalic-GOYoa.ttf');
+      src: url('./LeagueGothic-Italic.otf');
     }
 
     @font-face {
       font-family: CustomFontNormal;
-      src: url('./SpeedRushNormal.ttf');
+      src: url('./LeagueGothic-Regular.otf');
     }
     html,
     body,
     canvas {
-      font-family: CustomFontItalic;
+      /* font-family: CustomFontItalic; */
       margin: 0 !important;
       padding: 0 !important;
       overflow: hidden !important;
     }
     </style>
     <script type="module" src="../game/index.ts"></script>
+    <div style="font-family:CustomFontItalic; position:absolute; left:-1000px; visibility:hidden;">.</div>
+    <div style="font-family:CustomFontNormal; position:absolute; left:-1000px; visibility:hidden;">.</div>
   </head>
   <body>
     <div id="game"></div>
